# BIT_QG_manuscript

./: .gitignore  CMakeLists.txt  README.md
graphs/: draw.py  generate.py
include/: bc.h  example.h  mf_diagonal_quantum_graph.h  mf_neumann_neumann.h  mf_polynomial_quantum_graph.h  mf_quantum_graph.h  neumann_neumann.h  nnedge.h  qgedge.h  quantum_graph.h
src/: 1d_fem.cpp  manuscript_cases.zsh  mf_diagonal_quantum_graph.cpp  mf_neumann_neumann.cpp  mf_polynomial_quantum_graph.cpp  mf_quantum_graph.cpp  neumann_neumann.cpp  nnedge.cpp  quantum_graph.cpp  schwarz.cpp  tester.cpp
